--- a/kitty.conf
+++ b/kitty.conf
@@ -1027,7 +1027,7 @@ initial_window_height 30c
 #: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
 #: preference as a string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1217,7 +1217,7 @@ initial_window_height 30c
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 1
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1242,7 +1242,7 @@ initial_window_height 30c
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-# background_blur 0
+background_blur 0
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1290,7 +1290,7 @@ initial_window_height 30c
 
 #:     transparent_background_colors red@0.5 #00ff00@0.3
 
-# dynamic_background_opacity no
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
