--- a/kitty.conf
+++ b/kitty.conf
@@ -307,7 +307,7 @@ font_size 10.0
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
 
-# cursor_trail 0
+# cursor_trail 1
 
 #: Set this to a value larger than zero to enable a "cursor trail"
 #: animation. This is an animation that shows a "trail" following the
@@ -740,7 +740,7 @@ font_size 10.0
 
 #: Performance tuning {{{
 
-# repaint_delay 10
+repaint_delay 8
 
 #: Delay between screen updates (in milliseconds). Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
@@ -750,7 +750,7 @@ font_size 10.0
 #: refresh rate. Also, to minimize latency when there is pending input
 #: to be processed, this option is ignored.
 
-# input_delay 3
+input_delay 2
 
 #: Delay before input from the program running in the terminal is
 #: processed (in milliseconds). Note that decreasing it will increase
@@ -1213,11 +1213,11 @@ confirm_os_window_close 0
 #: Color scheme {{{
 
 # foreground #dddddd
-# background #000000
+background #000000
 
 #: The foreground and background colors.
 
-background_opacity 1
+background_opacity 0.85
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1242,7 +1242,7 @@ background_opacity 1
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-background_blur 0
+background_blur 1
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -2641,6 +2641,14 @@ dynamic_background_opacity yes
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Dark One Nuanced
 include current-theme.conf
 # END_KITTY_THEME
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="RobotoMono Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
